tdf#157680 scale down size and adjust size and scale factor for /BBox

The size of an embedded PDF files is multiplied by
PDF_INSERT_MAGIC_SCALE_FACTOR for platforms like macOS so undo that
by adjusting the size and scale factor.

For some unknown reason, when exporting the following PDF, the
estimated size of embedded PDF charts are 20x larger than expected.
This only occurs on macOS so possibly there is some special conversion
from MapUnit::MapPoint to MapUnit::MapTwip elsewhere in the code:

  https://bugs.documentfoundation.org/attachment.cgi?id=190109

Change-Id: Id0563466fea3d7a3a0419787ec9da45f0c1d2e0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158155
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>